Github#2 (UI) : fix select on safari.

--- a/src/styles/_bootstrap-additional.scss
+++ b/src/styles/_bootstrap-additional.scss
@@ -5,3 +5,8 @@
 .bg-disabled {
     background-color: $gray-400;
 }
+
+.form-select {
+    -webkit-appearance: none !important;
+    appearance: none !important;
+}
